--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ANWARS GIT TUT</title>
 </head>
 <body>
-<h1>GIT TUTORIAL</h1>
+<h1>GIT TUTORIAL NEW </h1>
     <h2>Anwar: </h2>
     <h2>Mohamed: </h2>
 
