--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>GIT TUTORIAL</h1>
     <h2>Anwar: Who is your Lord?</h2>
-    <h2>Mohamed:</h2>
+    <h2>Mohamed: الله سبحانه وتعالى</h2>
   </body>
 </html>
